--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,7 @@ version = "0.2.2"
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
 ReadmeDocs = "c63066b3-de92-487d-9da7-7c375a07912b"
+
+[compat]
+
+Clang = "0.12, 0.13"
